--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@use '~@angular/material' as mat
+
+// Use the default configuration.
+$my-typography: mat.define-typography-config()
